<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Shivam Tiwari on 21/04/23, 3:39 AM
  ~  * Copyright (c) 2023 . All rights reserved.
  ~  * Last modified 20/04/23, 8:31 PM
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_conf"
        android:title="@string/menu_conf"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_menu_e2ee"
        android:title="@string/EtoEEncryption"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_calllogs"
        android:title="@string/menu_calllogs"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@id/mesibo_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@id/mesibo_contacts"
        android:icon="@drawable/ic_message_white_24dp"
        android:orderInCategory="0"
        android:title="Add"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/mesibo_share"
        android:icon="@drawable/ic_action_share"
        android:title="Invite Family and Friends"
        android:visible="false"
        app:showAsAction="ifRoom" />


</menu>
