<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Shivam Tiwari on 05/05/23, 3:15 PM
  ~  * Copyright (c) 2023 . All rights reserved.
  ~  * Last modified 04/05/23, 4:06 AM
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5E5E5E">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/attachment_bottomsheet_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="26dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textColor="@color/text_color_black_white"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/cancel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_toStartOf="@id/submit"
                android:paddingTop="2dp"
                android:text="@string/cancel_text"
                android:textColor="@color/text_color_subtitle"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingTop="2dp"
                android:text="@string/save_verify_text"
                android:textColor="@color/text_color17"
                android:textSize="10dp" />
        </RelativeLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_5" />

        <TextView
            android:id="@+id/openToAllDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="18dp"
            android:text="@string/change_email_text"
            android:textColor="@color/text_color17"
            android:textSize="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="18dp"
            android:paddingTop="8dp"
            android:paddingBottom="33dp">

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:backgroundTint="@color/transparent_color"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/email_address"
                android:textColor="@color/text_color17"
                android:textSize="12dp"
                tools:ignore="NotSibling" />

        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>