<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_700">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/attachment_bottomsheet_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/start_your_conversation"
                android:textColor="@color/text_color_black_white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_close" />
        </RelativeLayout>


        <TextView
            android:id="@+id/create_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:drawableLeft="@drawable/create_group"
            android:drawablePadding="10dp"
            android:gravity="left"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/create_new_group"
            android:textColor="@color/text_color_black_white"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/create_qamp_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:drawableLeft="@drawable/qamp_room"
            android:drawablePadding="10dp"
            android:gravity="left"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/create_qamp_room"
            android:textColor="@color/text_color_black_white"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/background_tintTaskBar"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="0dp"
                android:layout_toStartOf="@+id/imageView3"
                android:background="@color/transparent_color"
                android:ems="10"
                android:gravity="center|left"
                android:hint="@string/search_by_name_contact_number"
                android:inputType="textPersonName"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:textColorHint="@color/text_color_subtitle"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center|left"
                android:src="@mipmap/search_box" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/my_contacts"
            android:textColor="@color/text_color_black_white"
            android:textSize="14sp" />

        <TextView

            android:id="@+id/emptyview_tex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/not_have_qamp_contact"
            android:textColor="@color/md_grey_500"
            android:textSize="20sp"
            android:textStyle="italic"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>