<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5E5E5E">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/attachment_bottomsheet_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="26dp"
            android:paddingBottom="26dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/about_text"
                android:textColor="@color/text_color_black_white"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/cancel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_toStartOf="@id/submit1"
                android:paddingTop="4dp"
                android:text="@string/cancel_text"
                android:textColor="@color/text_color_subtitle"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/submit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:paddingTop="4dp"
                android:text="@string/save_text"
                android:textColor="@color/text_color17"
                android:textSize="10dp" />
        </RelativeLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/background_tintTaskBar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="18dp"
            android:paddingTop="8dp"
            android:paddingBottom="33dp">

            <EditText
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_toStartOf="@+id/textView10"
                android:background="@color/transparent_color"
                android:hint="@string/about_text"
                android:inputType="textPersonName"
                android:maxLength="100"
                android:textColor="@color/text_color17"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingTop="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/max_content_text"
                android:textColor="@color/text_color_subtitle"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>