<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Shivam Tiwari on 05/05/23, 3:15 PM
  ~  * Copyright (c) 2023 . All rights reserved.
  ~  * Last modified 21/04/23, 3:40 AM
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:background="#5E5E5E">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/attachment_bottomsheet_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="26dp"
            android:paddingBottom="26dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/name_text"
                android:textColor="@color/text_color_black_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_toStartOf="@id/save"
                android:foregroundGravity="center_vertical"
                android:gravity="center_vertical"
                android:paddingTop="4dp"
                android:text="@string/cancel_text"
                android:textColor="@color/text_color_subtitle"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:foregroundGravity="center"
                android:paddingTop="4dp"
                android:text="@string/save_text"
                android:textColor="@color/text_color17"
                android:textSize="10sp" />
        </RelativeLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_5" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="18dp"
            android:paddingTop="8dp"
            android:paddingBottom="33dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:maxLength="50"
                android:layout_toStartOf="@+id/textView6"
                android:background="@color/transparent_color"
                android:ems="10"
                android:hint="@string/name_text"
                android:inputType="textPersonName"
                android:textColor="@color/text_color17"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingTop="2dp"
                android:text="@string/max_name_test"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/text_color_subtitle"
                android:textSize="14sp"  />
        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>