<!--
  ~ /**
  ~  * Created by Shivam Tiwari on 20/05/23, 3:30 AM
  ~  * Copyright (c) 2023 . All rights reserved.
  ~  * Last modified 05/05/23, 3:15 PM
  ~  */
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_image_bg"
    android:clipToPadding="false"
    android:scrollbars="none"
    android:scrollingCache="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_gravity="center"
            android:layout_marginRight="0dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/onboarding_card_view"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_marginRight="37dp"
                android:fontFamily="@font/montserrat_regular"
                android:lineHeight="49sp"
                android:text="@string/onboarding_chat_heading"
                android:textAlignment="center"
                android:textColor="@color/text_color_black_orange"
                android:textSize="40dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"/>

            </LinearLayout>


            <TextView
                android:id="@+id/brief"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_marginLeft="36dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="36dp"
                android:fontFamily="@font/montserrat_regular"
                android:lineHeight="20sp"
                android:text="@string/onboarding_sub_text1"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:textColor="@color/text_color_black_white"
                android:textSize="16dp" />

            <LinearLayout
                android:id="@+id/layout_dots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/skip_btn"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/skip_btn"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:textSize="16dp"
                android:text="@string/skip"
                android:textColor="@color/text_color13"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>
